@@ -1,6 +1,6 @@
 Package: RcppClassicExamples
 Title: Examples using 'RcppClassic' to Interface R and C++ 
-Version: 0.1.3
+Version: 0.1.3.1
 Date: 2024-11-30
 Authors@R: c(person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
                     comment = c(ORCID = "0000-0001-6419-907X")),
@@ -16,7 +16,7 @@ Description: The 'Rcpp' package contains a C++ library that facilitates the
  'RcppExamples' with examples for the newer, current API which we
  strongly recommend as the basis for all new development.
 Depends: R (>= 2.15.2)
-Imports: Rcpp (>= 0.10.2), RcppClassic (>= 0.9.3)
+Imports: Rcpp (>= 0.10.2), RcppClassic (>= 0.9.13.1)
 LinkingTo: Rcpp, RcppClassic
 Suggests: RUnit 
 URL: https://github.com/eddelbuettel/rcppclassicexamples, https://dirk.eddelbuettel.com/code/rcpp.classic.html
