@@ -1,3 +1,9 @@
+2025-03-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/classicRcppExample.cpp: No contain factor parts of example
+
+	* DESCRIPTION: Depend on RcppClassic (>= 0.9.13.1)
+
 2025-03-14  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .github/workflows/ci.yaml: Switch to r-ci with implicit bootstrap
